public class MonsterAnimation
{
    public const string Idle = "Idle";
    public const string Walk = "Walk";
    public const string Charge = "Charge";
    public const string Attack = "Attack";
    public const string AttackEnd = "AttackEnd";
    public const string Turn = "Turn";
    public const string Hurt = "Hurt";
    public const string Groggy = "Groggy";
    public const string GroggyEnd = "GroggyEnd";
    public const string Die = "Die";
}